# robotic-manipulator-Fanuc_M20IA35M

./: DEBUG.md  Doxyfile  LICENSE.txt  MATERIALS.md  README.md
acg_resources_fanuc_m20ia_35m_description/: CMakeLists.txt  README.md  package.xml
acg_resources_fanuc_m20ia_35m_description/config/: inertial.yaml  urdf.rviz
acg_resources_fanuc_m20ia_35m_description/launch/: display.launch.py
acg_resources_fanuc_m20ia_35m_description/meshes/collision/: drilling_tool.stl  slide.stl
acg_resources_fanuc_m20ia_35m_description/meshes/visual/: drilling_tool.dae  link_0.dae  link_1.dae  link_2.dae  link_3.dae  link_4.dae  link_5.dae  link_6.dae  slide.dae
acg_resources_fanuc_m20ia_35m_description/urdf/: fanuc_m20ia_35m.xacro  inertial.xacro
acg_resources_fanuc_m20ia_35m_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
acg_resources_fanuc_m20ia_35m_moveit_config/config/: fanuc_m20ia_35m.ros2_control.xacro  fanuc_m20ia_35m.srdf  fanuc_m20ia_35m.urdf.xacro  initial_efforts.yaml  initial_positions.yaml  initial_velocities.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  planning_rviz.rviz  ros2_control_demo.rviz  ros2_controllers.yaml  ros2_controllers_effort.yaml  ros2_controllers_fastening.yaml
acg_resources_fanuc_m20ia_35m_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_gazebo_ros2_control_demo.launch.py  moveit_rviz.launch.py  planning_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
action_cartesian_trajectory/: CMakeLists.txt  README.md  package.xml
action_cartesian_trajectory/action/: FollowCartesianTrajectory.action
fanuc_m20ia_35m_planning_demo/: CMakeLists.txt  README.md  package.xml
fanuc_m20ia_35m_planning_demo/include/: action_node.hpp
fanuc_m20ia_35m_planning_demo/launch/: alone_start.launch.py  demo.launch.py
fanuc_m20ia_35m_planning_demo/src/: action_node.cpp  fanuc_moveit_planning_node.cpp
matlab_scripts/: GUI_functions.m  MSEgiunti.m  MSEoperativo.m  README.md  generate_path.m  launch_matlab_script.sh  parabola.m  planning_info.txt  plot3D_function_from_points.m  print2D_function.m  readDataFromFile.m  trajectory.m  trajectory_script.m
matlab_scripts/bagfiles/basic/: basic_0.db3
matlab_scripts/bagfiles/basicplane_lowoblique/: basicplane_lowoblique_0.db3
matlab_scripts/bagfiles/horizontal_low/: horizontal_low_0.db3
matlab_scripts/bagfiles/low_ground/: low_ground_0.db3
matlab_scripts/bagfiles/tight_left/: tight_left_0.db3
matlab_scripts/bagfiles/yrotatedplane/: yrotatedplane_0.db3
matlab_scripts/bagfiles/zrotatedplane/: zrotatedplane_0.db3
plotjuggler_configurations/: README.md  configuration_plotjuggler.xml  layout2plotjuggler.xml
plotjuggler_configurations/TUNING/CSV_before_and_after_tuning_ziegler_nichols/: after_corrections_csv_datarange_final.csv  after_corrections_csv_statistics_final.csv  after_tuning_csv_statistics_final.csv  before_tuning_csv_datarange_final.csv  before_tuning_csv_statistics_final.csv
plotjuggler_configurations/TUNING/Experiments/Basic/: csv_statistics_basic.csv
plotjuggler_configurations/TUNING/Experiments/Horizontal_Low/: csv_statistics_horizontal_low.csv
plotjuggler_configurations/TUNING/Experiments/Yrotatedplane/: csv_statistics_yrotatedplane.csv
plotjuggler_configurations/TUNING/Experiments/Zrotatedplane/: csv_statistics_zrotatedplane.csv
server_trajectory/: CMakeLists.txt  README.md  package.xml
server_trajectory/launch/: demo.launch.py
server_trajectory/src/: server.cpp
supporting_scripts/: README.md  rotation_to_rpy.py  script_inertia_matrix_and_center_of_mass.py
task_space_velocity_controller/: CMakeLists.txt  README.md  package.xml  velocity_controller.xml
task_space_velocity_controller/include/task_space_velocity_controller/: velocity_controller.hpp  visibility_controller.h
task_space_velocity_controller/src/: velocity_controller.cpp
trajectory_interfaces/: CMakeLists.txt  README.md  package.xml
trajectory_interfaces/srv/: SetTrajectoryStart.srv
