<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>task_space_velocity_controller</name>
  <version>0.0.0</version>
  <description>Velocity controller used by group 2 of Robotics class at the University of Salerno </description>
  <maintainer email="g.intonti@studenti.unisa.it">giovanni</maintainer>
  <maintainer email="d.risi2@studenti.unisa.it">Davide Risi</maintainer>
  <maintainer email="g.barone36@studenti.unisa.it">Guglielmo Barone</maintainer>
  <maintainer email="a.pagano93@studenti.unisa.it">Adolfo Pagano</maintainer>  

  <author email="g.intonti@studenti.unisa.it">Giovanni Intonti</author>
  <author email="d.risi2@studenti.unisa.it">Davide Risi</author>
  <author email="g.barone36@studenti.unisa.it">Guglielmo Barone</author>
  <author email="a.pagano93@studenti.unisa.it">Adolfo Pagano</author>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>action_cartesian_trajectory</depend>
  <depend>realtime_tools</depend>
  <depend>controller_manager</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_add_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>
  
  <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <controller_interface plugin="${prefix}/velocity_controller.xml"/>
  </export>
</package>
